--- a/style.css
+++ b/style.css
@@ -8,6 +8,17 @@
     --light-wood: rgb(138, 117, 88);
 }
 
+html {
+    background-image: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 0.55),
+        rgba(0, 0, 0, 0.55)
+    ), url(https://images.unsplash.com/photo-1505075106905-fb052892c116?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);    
+    background-repeat: no-repeat;    
+    background-attachment: fixed;    
+    background-size: cover;
+}
+
 header {
     margin: 2em;
     text-align: center;
@@ -26,16 +37,7 @@ body {
     flex-direction: column;
     font-family: 'Poppins', sans-serif;    
     font-weight: 200;
-    color: white;
-    background-image: linear-gradient(
-        0deg,
-        rgba(0, 0, 0, 0.55),
-        rgba(0, 0, 0, 0.55)
-    ), url(https://images.unsplash.com/photo-1505075106905-fb052892c116?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
-    background-position: center center;
-    background-repeat: no-repeat;    
-    background-attachment: fixed;    
-    background-size: cover;
+    color: white;  
 }
 
 .form-container {
