--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-* {
+/** {
     box-sizing: border-box;
-}
+}*/
 
 :root {
     --wood: rgba(71, 61, 47, 0.7);     
@@ -36,8 +36,6 @@ body {
     background-repeat: no-repeat;    
     background-attachment: fixed;    
     background-size: cover;
-    background-position: center;
-    background-clip: border-box;
 }
 
 .form-container {
