--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-/** {
+* {
     box-sizing: border-box;
-}*/
+}
 
 :root {
     --wood: rgba(71, 61, 47, 0.7);     
@@ -36,6 +36,7 @@ body {
     background-repeat: no-repeat;    
     background-attachment: fixed;    
     background-size: cover;
+    background-clip: content-box;
 }
 
 .form-container {
