--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
     background-attachment: fixed;    
     background-size: cover;
     background-clip: content-box;
-    overflow: scroll;
+    overflow: auto;
 }
 
 
